[tool.poetry]
name = "ankr-sdk"
version = "0.2.0"
description = "Compact Python library for interacting with Ankr's Advanced APIs."
authors = ["Roman Fasakhov <romanfasakhov@ankr.com>"]
license = "MIT License"

homepage = "https://ankr.com/"
repository = "https://github.com/Ankr-network/ankr-python-sdk"
keywords = ["ankr", "sdk", "blockchain", "nft"]
readme = "README.md"
include = ["LICENSE"]

packages = [{ include = "ankr" }]


[tool.poetry.dependencies]
python = "^3.7.2"
web3 = "^5.29.2"
pydantic = "^1.9.1"
pyhumps = "^3.7.2"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
