[tool.poetry]
name = "ankr-sdk"
version = "0.3.0"
description = "Compact Python library for interacting with Ankr's Advanced APIs."
authors = ["Roman Fasakhov <romanfasakhov@ankr.com>"]
license = "MIT License"

homepage = "https://ankr.com/"
repository = "https://github.com/Ankr-network/ankr-python-sdk"
keywords = ["ankr", "sdk", "blockchain", "nft"]
readme = "README.md"
include = ["LICENSE"]

packages = [{ include = "ankr" }]


[tool.poetry.dependencies]
python = "^3.8.1"
web3 = "^6.0.0"
pydantic = "^1.10.7"
pyhumps = "^3.8.0"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
